de2/force-app/main/default/objects/Account/fields/AdditionalComent__c.field-meta.xml
<CustomField>
<fullName>AdditionalComent__c</fullName>
<label>補足説明</label>
<type>Text</type>
<length>100</length>
</CustomField>