de2/force-app/main/default/objects/Account/fields/Addressee__c.field-meta.xml
<CustomField>
<fullName>Addressee__c</fullName>
<label>宛名</label>
<type>Text</type>
<length>200</length>
</CustomField>