de2/force-app/main/default/objects/Account/fields/aitest1__c.field-meta.xml
<CustomField>
<fullName>aitest1__c</fullName>
<label>aiテスト①</label>
<type>Checkbox</type>
<defaultValue>false</defaultValue>
</CustomField>