de2/force-app/main/default/objects/Account/fields/aitest2__c.field-meta.xml
<CustomField>
<fullName>aitest2__c</fullName>
<label>aiテスト②</label>
<type>TextArea</type>
</CustomField>