de2/force-app/main/default/objects/Account/fields/aitest3__c.field-meta.xml
<CustomField>
<fullName>aitest3__c</fullName>
<label>aiテスト③</label>
<type>Percent</type>
<precision>4</precision>
<scale>2</scale>
</CustomField>