de2/force-app/main/default/objects/Account/fields/InvoiceLink__c.field-meta.xml
<CustomField>
<fullName>InvoiceLink__c</fullName>
<label>請求書リンク</label>
<type>Url</type>
<description>リンクを記載すること</description>
</CustomField>