de2/force-app/main/default/objects/Account/fields/InvoiceNote__c.field-meta.xml
<CustomField>
<fullName>InvoiceNote__c</fullName>
<label>請求備考</label>
<type>LongTextArea</type>
<length>10000</length>
</CustomField>