de2/force-app/main/default/objects/Account/fields/InvoiceStaffName__c.field-meta.xml
<CustomField>
<fullName>InvoiceStaffName__c</fullName>
<label>請求担当者名</label>
<type>Text</type>
<length>100</length>
</CustomField>